# miniml2wasm

./: .gitignore  README.md  dune  dune-project  miniml2wasm.opam
examples/: README.md  dune  export.js  export.mml  export.t  fact.mml  fact.t  fibo.mml  fibo.t  import.js  import.mml  list.js  list.mml  list.t  print.js  print.mml  print.t  print.wat  read.js  read.wat
src/: ast.ml  compiler.ml  compiler.mli  compiler_basic.ml  dune  env.ml  lexer.ml  memory.ml  memory.mli  parser.mly  scope.ml  scope.mli  typer.ml  typer.mli  unused_vars.ml  unused_vars.mli
test/: 42.mml  compiler_1.mml  compiler_1.t  compiler_3.mml  compiler_3.t  dune  scope.t  scope_2.mml  scope_3.mml  scope_5.mml  typer.t  typer_11.mml  typer_15.mml  typer_16.mml  typer_17.mml  typer_2.mml  typer_3.mml  typer_4.mml  typer_5.mml  typer_6.mml  typer_7.mml  typer_8.mml  typer_9.mml
test/compiler/: array.mml  array.t  array_assert.mml  array_assert.t  array_bounds.mml  array_bounds.t  array_make.mml  array_make.t  array_make_memory.mml  array_make_memory.t  assert.mml  assert.t  block.mml  block.t  compiler_2.t  dune  func.mml  func.t  func_array.mml  func_array.t  func_array_0.mml  func_nothing.mml  if.t  if_parser_priority.mml  if_parser_priority.t  let_parser_priority.mml  let_parser_priority.t  list.t  list_empty_1.mml  list_empty_2.mml  list_hd_1.mml  list_hd_2.mml  list_hd_3.mml  list_tl_1.mml  list_tl_2.mml  list_tl_3.mml  matrix.mml  matrix.t  matrix_bounds.t  matrix_bounds_1.mml  (+8 more)
test/scope/: block_1.mml  block_2.mml  block_3.mml  dune  global.mml  global_1.mml  global_export_1.mml  global_export_2.mml  global_import.mml  local.mml  scope.t  scope_6.mml  scope_7.mml  var.mml
test/typer/: array_access_indice.mml  array_global.mml  array_make_0.mml  array_make_1.mml  array_make_2.mml  array_make_3.mml  array_make_4.mml  array_matrix_typ_uniform_1.mml  array_matrix_typ_uniform_2.mml  array_matrix_typ_uniform_3.mml  array_ref.mml  array_size_0.mml  array_size_1.mml  array_size_2.mml  array_size_matrix.mml  array_typ_size.mml  array_typ_uniform_1.mml  array_typ_uniform_2.mml  array_var.mml  assert.mml  binop_min.mml  block_1.mml  block_2.mml  block_3.mml  dune  export.mml  fun_1.mml  fun_10.mml  fun_2.mml  fun_3.mml  fun_4.mml  fun_5.mml  fun_6.mml  fun_7.mml  fun_8.mml  fun_9.mml  fun_rec_1.mml  fun_rec_2.mml  global_binop.mml  import.mml  (+36 more)
