(cram
 (deps
  compiler_1.mml
  compiler_2.mml
  scope_1.mml
  scope_2.mml
  scope_3.mml
  scope_4.mml
  scope_5.mml
  scope_6.mml
  scope_7.mml
  typer_1.mml
  typer_2.mml
  typer_3.mml
  typer_4.mml
  typer_5.mml
  typer_6.mml
  typer_7.mml
  typer_8.mml
  typer_9.mml
  typer_10.mml
  typer_11.mml
  typer_12.mml
  typer_13.mml
  typer_14.mml
  typer_15.mml
  typer_16.mml
  typer_17.mml
  (glob_files _wasm/*)))
