(cram
 (deps
  array_assert.mml
  array_bounds.mml
  array_make_memory.mml
  array_make.mml
  array.mml
  assert.mml
  block.mml
  func_array.mml
  func_nothing.mml
  func.mml
  if_parser_priority.mml
  if.mml
  let_parser_priority.mml
  list_empty_1.mml
  list_empty_2.mml
  list_hd.mml
  list_tl.mml
  matrix_bounds_1.mml
  matrix_bounds_2.mml
  matrix_make_memory.mml
  matrix_make.mml
  matrix.mml
  unused_vars.mml
  while.mml
  (glob_files _wasm/*)))
