(cram
 (deps
  binop_bool.mml
  binop_ge.mml
  binop_min.mml
  block_1.mml
  block_2.mml
  block_3.mml
  global_binop.mml
  local_binop.mml
  local_if.mml
  local_unop.mml
  local.mml
  ref_assign.mml
  ref_binop_1.mml
  ref_binop_2.mml
  ref_deref.mml
  while_1.mml
  while_2.mml
  (glob_files _wasm/*)))
