(cram
 (deps
  array_access_indice.mml
  array_global.mml
  array_make_0.mml
  array_make_1.mml
  array_make_2.mml
  array_make_3.mml
  array_make_4.mml
  array_matrix_typ_uniform_1.mml
  array_matrix_typ_uniform_2.mml
  array_matrix_typ_uniform_3.mml
  array_ref.mml
  array_size_0.mml
  array_size_1.mml
  array_size_2.mml
  array_size_matrix.mml
  array_typ_size.mml
  array_typ_uniform_1.mml
  array_typ_uniform_2.mml
  array_var.mml
  assert.mml
  binop_bool.mml
  binop_ge.mml
  binop_min.mml
  block_1.mml
  block_2.mml
  block_3.mml
  export.mml
  fun_1.mml
  fun_2.mml
  fun_3.mml
  fun_4.mml
  fun_5.mml
  fun_6.mml
  fun_7.mml
  fun_8.mml
  fun_9.mml
  fun_10.mml
  global_binop.mml
  import.mml
  list_1.mml
  list_2.mml
  list_3.mml
  list_4.mml
  list_empty_1.mml
  list_empty_2.mml
  list_hd_1.mml
  list_hd_2.mml
  list_hd_3.mml
  list_tl_1.mml
  list_tl_2.mml
  list_tl_3.mml
  local_binop.mml
  local_if.mml
  local_unop.mml
  local.mml
  matrix_make_0.mml
  matrix_make_1.mml
  matrix_make_2.mml
  matrix_make_3.mml
  matrix_make_4.mml
  matrix_make_5.mml
  ref_assign.mml
  ref_binop_1.mml
  ref_binop_2.mml
  ref_deref.mml
  while_1.mml
  while_2.mml
  (glob_files _wasm/*)))
